--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.10.1",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
@@ -25,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "sass": "^1.69.4",
     "vite": "^4.4.5",
     "vite-plugin-style-import": "^2.0.0"
   }
