--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
     "nprogress": "^0.2.0",
