--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/charts": "^1.4.2",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
