--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
