--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@microsoft/fetch-event-source": "^2.0.1",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
