--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#3367D6",
   "icons": [
     {
-      "src": "/public/m.svg",
+      "src": "/public/logo-mrk.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/public/m.svg",
+      "src": "/public/logo-mrk.png",
       "sizes": "512x512",
       "type": "image/png"
     }
