--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-spring": "^9.7.3",
