feat(manage/create): 上传组件封装,增加控制裁剪功能

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/charts": "^1.4.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "antd": "^5.10.1",
+    "antd-img-crop": "^4.21.0",
     "axios": "^1.5.1",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
