--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-spring": "^9.7.3",
+    "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1"
   },
   "devDependencies": {
