--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-intl": "^6.6.2",
+    "react-intl": "^6.6.5",
     "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
@@ -39,6 +40,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "sass": "^1.69.4",
+    "terser": "^5.30.3",
     "vite": "^4.4.5",
     "vite-plugin-style-import": "^2.0.0"
   }
